(update) auth features
