# src/models/user.model.ts
@@ -6,7 +6,7 @@ export interface Credentials {
 export type User = Credentials;
 
 export enum CovAuthOption {
-  signUp = 'signUp',
-  signIn = 'signIn',
-  signOut = 'signOut'
+  signUp = 0,
+  signIn = 1,
+  signOut = -1
 }
